[package]
name = "typejet"
version = "0.1.0"
edition = "2021"
description = "A Python wrapper for Linux /dev/uinput keystroke simulation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Dwarakesh-V/TypeJet"

[lib]
name = "typejet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rand = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
input-linux = "0.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }